src/architecture/rust/bsk_utilities/src/raw.rs

// This file is AUTO-GENERATED by src/architecture/rust/gen_rust_utilities.py.
// DO NOT EDIT BY HAND.
//
// Source headers: astroConstants.h, macroDefinitions.h, orbitalMotion.h, and
// rigidBodyKinematics.h.
//
/* automatically generated by rust-bindgen 0.72.1 */

pub const AU: f64 = 149597870.693;
pub const AU2M: f64 = 149597870693.0;
pub const SPEED_LIGHT: u32 = 299792458;
pub const SOLAR_FLUX_EARTH: f64 = 1361.0;
pub const D2R: f64 = 0.017453292519943295;
pub const R2D: f64 = 57.29577951308232;
pub const RPM: f64 = 0.10471975511965977;
pub const EARTH_GRAV: f64 = 9.80665;
pub const MU_SUN: f64 = 132712440023.31;
pub const MU_MERCURY: f64 = 22032.08;
pub const MU_VENUS: f64 = 324858.599;
pub const MU_EARTH: f64 = 398600.436;
pub const MU_MOON: f64 = 4902.799;
pub const MU_MARS: f64 = 42828.314;
pub const MU_JUPITER: f64 = 126712767.881;
pub const MU_SATURN: f64 = 37940626.068;
pub const MU_URANUS: f64 = 5794559.128;
pub const MU_NEPTUNE: f64 = 6836534.065;
pub const MU_PLUTO: f64 = 983.055;
pub const REQ_SUN: f64 = 695000.0;
pub const REQ_MERCURY: f64 = 2439.7;
pub const REQ_VENUS: f64 = 6051.8;
pub const REQ_EARTH: f64 = 6378.1366;
pub const RP_EARTH: f64 = 6356.7519;
pub const REQ_MOON: f64 = 1737.4;
pub const REQ_MARS: f64 = 3396.19;
pub const RP_MARS: f64 = 3376.2;
pub const REQ_JUPITER: f64 = 71492.0;
pub const REQ_SATURN: f64 = 60268.0;
pub const REQ_URANUS: f64 = 25559.0;
pub const REQ_NEPTUNE: f64 = 24746.0;
pub const REQ_PLUTO: f64 = 1137.0;
pub const NANO2SEC: f64 = 0.000000001;
pub const SEC2NANO: f64 = 1000000000.0;
pub const SEC2HOUR: f64 = 0.0002777777777777778;
#[doc = " @brief Structure used to define classic orbit elements"]
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct ClassicElements {
    #[doc = "!< object semi-major axis"]
    pub a: f64,
    #[doc = "!< Eccentricity of the orbit"]
    pub e: f64,
    #[doc = "!< inclination of the orbital plane"]
    pub i: f64,
    #[doc = "!< Right ascension of the ascending node"]
    pub Omega: f64,
    #[doc = "!< Argument of periapsis of the orbit"]
    pub omega: f64,
    #[doc = "!< True anomaly of the orbit"]
    pub f: f64,
    #[doc = "!< Magnitude of the position vector (extra)"]
    pub rmag: f64,
    #[doc = "!< Inverted semi-major axis (extra)"]
    pub alpha: f64,
    #[doc = "!< Radius of periapsis (extra)"]
    pub rPeriap: f64,
    #[doc = "!< Radius if apoapsis (extra)"]
    pub rApoap: f64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ClassicElements"][::core::mem::size_of::<ClassicElements>() - 80usize];
    ["Alignment of ClassicElements"][::core::mem::align_of::<ClassicElements>() - 8usize];
    ["Offset of field: ClassicElements::a"][::core::mem::offset_of!(ClassicElements, a) - 0usize];
    ["Offset of field: ClassicElements::e"][::core::mem::offset_of!(ClassicElements, e) - 8usize];
    ["Offset of field: ClassicElements::i"][::core::mem::offset_of!(ClassicElements, i) - 16usize];
    ["Offset of field: ClassicElements::Omega"]
        [::core::mem::offset_of!(ClassicElements, Omega) - 24usize];
    ["Offset of field: ClassicElements::omega"]
        [::core::mem::offset_of!(ClassicElements, omega) - 32usize];
    ["Offset of field: ClassicElements::f"][::core::mem::offset_of!(ClassicElements, f) - 40usize];
    ["Offset of field: ClassicElements::rmag"]
        [::core::mem::offset_of!(ClassicElements, rmag) - 48usize];
    ["Offset of field: ClassicElements::alpha"]
        [::core::mem::offset_of!(ClassicElements, alpha) - 56usize];
    ["Offset of field: ClassicElements::rPeriap"]
        [::core::mem::offset_of!(ClassicElements, rPeriap) - 64usize];
    ["Offset of field: ClassicElements::rApoap"]
        [::core::mem::offset_of!(ClassicElements, rApoap) - 72usize];
};
pub const CELESTIAL_MERCURY: CelestialObject_t = 0;
pub const CELESTIAL_VENUS: CelestialObject_t = 1;
pub const CELESTIAL_EARTH: CelestialObject_t = 2;
pub const CELESTIAL_MOON: CelestialObject_t = 3;
pub const CELESTIAL_MARS: CelestialObject_t = 4;
pub const CELESTIAL_PHOBOS: CelestialObject_t = 5;
pub const CELESTIAL_DEIMOS: CelestialObject_t = 6;
pub const CELESTIAL_JUPITER: CelestialObject_t = 7;
pub const CELESTIAL_SATURN: CelestialObject_t = 8;
pub const CELESTIAL_URANUS: CelestialObject_t = 9;
pub const CELESTIAL_NEPTUNE: CelestialObject_t = 10;
pub const CELESTIAL_PLUTO: CelestialObject_t = 11;
pub const CELESTIAL_SUN: CelestialObject_t = 12;
pub const MAX_CELESTIAL: CelestialObject_t = 13;
pub type CelestialObject_t = ::core::ffi::c_uint;
#[doc = " equinoctial elment struct definition"]
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct equinoctialElements {
    #[doc = "!< semi-major axis"]
    pub a: f64,
    #[doc = "!< e*sin(omega+Omega)"]
    pub P1: f64,
    #[doc = "!< e*cos(omega+Omega)"]
    pub P2: f64,
    #[doc = "!< tan(i/2)*sin(Omega)"]
    pub Q1: f64,
    #[doc = "!< tan(i/2)*cos(Omega)"]
    pub Q2: f64,
    #[doc = "!< Omega+omega+M"]
    pub l: f64,
    #[doc = "!< Omega+omega+f"]
    pub L: f64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of equinoctialElements"][::core::mem::size_of::<equinoctialElements>() - 56usize];
    ["Alignment of equinoctialElements"][::core::mem::align_of::<equinoctialElements>() - 8usize];
    ["Offset of field: equinoctialElements::a"]
        [::core::mem::offset_of!(equinoctialElements, a) - 0usize];
    ["Offset of field: equinoctialElements::P1"]
        [::core::mem::offset_of!(equinoctialElements, P1) - 8usize];
    ["Offset of field: equinoctialElements::P2"]
        [::core::mem::offset_of!(equinoctialElements, P2) - 16usize];
    ["Offset of field: equinoctialElements::Q1"]
        [::core::mem::offset_of!(equinoctialElements, Q1) - 24usize];
    ["Offset of field: equinoctialElements::Q2"]
        [::core::mem::offset_of!(equinoctialElements, Q2) - 32usize];
    ["Offset of field: equinoctialElements::l"]
        [::core::mem::offset_of!(equinoctialElements, l) - 40usize];
    ["Offset of field: equinoctialElements::L"]
        [::core::mem::offset_of!(equinoctialElements, L) - 48usize];
};
pub const BSK_RUST_G_UNIVERSIAL: f64 = 0.0000000000000000000667259;
pub const BSK_RUST_SEC2DAY: f64 = 0.000011574074074074073;
pub const BSK_RUST_J2_EARTH: f64 = 0.001082616;
pub const BSK_RUST_J3_EARTH: f64 = -0.00000253881;
pub const BSK_RUST_J4_EARTH: f64 = -0.00000165597;
pub const BSK_RUST_J5_EARTH: f64 = -0.00000015;
pub const BSK_RUST_J6_EARTH: f64 = 0.00000057;
pub const BSK_RUST_J2_MARS: f64 = 0.00196045;
unsafe extern "C" {
    pub fn E2f(E: f64, e: f64) -> f64;
    pub fn E2M(E: f64, e: f64) -> f64;
    pub fn f2E(f: f64, e: f64) -> f64;
    pub fn f2H(f: f64, e: f64) -> f64;
    pub fn H2f(H: f64, e: f64) -> f64;
    pub fn H2N(H: f64, e: f64) -> f64;
    pub fn M2E(M: f64, e: f64) -> f64;
    pub fn N2H(N: f64, e: f64) -> f64;
    pub fn elem2rv(mu: f64, elements: *mut ClassicElements, rVec: *mut f64, vVec: *mut f64);
    pub fn rv2elem(mu: f64, rVec: *mut f64, vVec: *mut f64, elements: *mut ClassicElements);
    pub fn clMeanOscMap(
        req: f64,
        J2: f64,
        elements: *mut ClassicElements,
        elements_p: *mut ClassicElements,
        sgn: f64,
    );
    pub fn clElem2eqElem(elements_cl: *mut ClassicElements, elements_eq: *mut equinoctialElements);
    pub fn hillFrame(rc_N: *mut f64, vc_N: *mut f64, HN: *mut [f64; 3usize]);
    pub fn hill2rv(
        rc_N: *mut f64,
        vc_N: *mut f64,
        rho_H: *mut f64,
        rhoPrime_H: *mut f64,
        rd_N: *mut f64,
        vd_N: *mut f64,
    );
    pub fn rv2hill(
        rc_N: *mut f64,
        vc_N: *mut f64,
        rd_N: *mut f64,
        vd_N: *mut f64,
        rho_H: *mut f64,
        rhoPrime_H: *mut f64,
    );
    pub fn atmosphericDensity(alt: f64) -> f64;
    pub fn debyeLength(alt: f64) -> f64;
    pub fn atmosphericDrag(
        Cd: f64,
        A: f64,
        m: f64,
        rvec: *mut f64,
        vvec: *mut f64,
        advec: *mut f64,
    );
    pub fn solarRad(A: f64, m: f64, sunvec: *mut f64, arvec: *mut f64);
    pub fn addMRP(q1: *mut f64, q2: *mut f64, result: *mut f64);
    pub fn BinvMRP(q: *mut f64, B: *mut [f64; 3usize]);
    pub fn BmatMRP(q: *mut f64, B: *mut [f64; 3usize]);
    pub fn BdotmatMRP(q: *mut f64, dq: *mut f64, B: *mut [f64; 3usize]);
    pub fn C2MRP(C: *mut [f64; 3usize], q: *mut f64);
    pub fn dMRP(q: *mut f64, w: *mut f64, dq: *mut f64);
    pub fn dMRP2Omega(q: *mut f64, dq: *mut f64, w: *mut f64);
    pub fn ddMRP(q: *mut f64, dq: *mut f64, w: *mut f64, dw: *mut f64, ddq: *mut f64);
    pub fn ddMRP2dOmega(q: *mut f64, dq: *mut f64, ddq: *mut f64, dw: *mut f64);
    pub fn EP2MRP(q1: *mut f64, q: *mut f64);
    pub fn MRP2C(q: *mut f64, C: *mut [f64; 3usize]);
    pub fn MRP2EP(q1: *mut f64, q: *mut f64);
    pub fn MRPswitch(q: *mut f64, s2: f64, s: *mut f64);
    pub fn MRPshadow(qIn: *mut f64, qOut: *mut f64);
    pub fn wrapToPi(x: f64) -> f64;
    pub fn subMRP(q1: *mut f64, q2: *mut f64, q: *mut f64);
    pub fn Mi(angle: f64, axis: ::core::ffi::c_int, C: *mut [f64; 3usize]);
    pub fn tilde(v: *mut f64, mat: *mut [f64; 3usize]);
}
